may have actually fixed the text spacing this time

--- a/styles.css
+++ b/styles.css
@@ -73,8 +73,8 @@ a​:hover {
     height: 15vh;
     border-radius: 50%;
     margin-right: 2vw;
-    margin-top: auto;
-    margin-bottom: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
     box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
   }
 
@@ -134,7 +134,6 @@ a​:hover {
 }
 
 .wikicard {
-  line-height: 18vh; 
   width: 98%;
   margin-left: auto;
   margin-right: auto;
